<resources>
    <string name="app_name">Mycure</string>
    <string name="welcome">Welcome</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="full_name">Full name</string>
    <string name="identification_id">Identification (ID)</string>
    <string name="birthdate">Birthdate</string>
    <string name="location">Location</string>
    <string name="patient">Patient</string>
    <string name="doctor">Doctor</string>
</resources>