<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignUpPatient"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-114dp">

    <ImageButton
        android:id="@+id/backbutton_signuppatient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041"
        app:srcCompat="@drawable/ic_back_arrow" />

    <TextView
        android:id="@+id/title_signuppatient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:fontFamily="@font/jost_semibold"
        android:text="Sign Up"
        android:textColor="#4E53D0"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085" />

    <TextView
        android:id="@+id/subtitle_signuppatient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:fontFamily="@font/jost_semibold"
        android:text="Patient"
        android:textColor="#8488E3"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.143" />

    <EditText
        android:id="@+id/nameentry_signuppatient"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:backgroundTint="#757575"
        android:ems="10"
        android:fontFamily="@font/jost_regular"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:textColor="#757575"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.229" />

    <EditText
        android:id="@+id/identry_signuppatient"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:backgroundTint="#757575"
        android:ems="10"
        android:fontFamily="@font/jost_regular"
        android:hint="@string/identification_id"
        android:inputType="number"
        android:textColor="#757575"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameentry_signuppatient"
        app:layout_constraintVertical_bias="0.04" />

    <EditText
        android:id="@+id/birthdateentry_signuppatient"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:backgroundTint="#757575"
        android:ems="10"
        android:fontFamily="@font/jost_regular"
        android:hint="Birthdate (DD/MM/YYYY)"
        android:inputType="datetime"
        android:textColor="#757575"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/identry_signuppatient"
        app:layout_constraintVertical_bias="0.044" />

    <EditText
        android:id="@+id/locationentry_signuppatient"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:backgroundTint="#757575"
        android:ems="10"
        android:fontFamily="@font/jost_regular"
        android:hint="@string/location"
        android:inputType="textPostalAddress"
        android:textColor="#757575"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/identry_signuppatient"
        app:layout_constraintVertical_bias="0.201" />

    <EditText
        android:id="@+id/phonenumberentry_signuppatient"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:backgroundTint="#757575"
        android:ems="10"
        android:fontFamily="@font/jost_regular"
        android:hint="Phone Number"
        android:inputType="number"
        android:textColor="#757575"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationentry_signuppatient"
        app:layout_constraintVertical_bias="0.04" />

    <EditText
        android:id="@+id/emailentry_signuppatient"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:backgroundTint="#757575"
        android:ems="10"
        android:fontFamily="@font/jost_regular"
        android:hint="@string/email"
        android:textColorHint="#757575"
        android:inputType="textEmailAddress"
        android:textColor="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phonenumberentry_signuppatient"
        app:layout_constraintVertical_bias="0.094" />

    <EditText
        android:id="@+id/passwordentry_signuppatient"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:backgroundTint="#757575"
        android:ems="10"
        android:fontFamily="@font/jost_regular"
        android:hint="@string/password"
        android:textColorHint="#757575"
        android:inputType="textPassword"
        android:textColor="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailentry_signuppatient"
        app:layout_constraintVertical_bias="0.06" />

    <Button
        android:id="@+id/signupbutton_signuppatient"
        android:layout_width="140dp"
        android:layout_height="55dp"
        android:backgroundTint="#979BF0"
        android:elevation="4dp"
        android:fontFamily="@font/jost_regular"
        android:text="Sign Up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordentry_signuppatient"
        app:layout_constraintVertical_bias="0.282" />


</androidx.constraintlayout.widget.ConstraintLayout>